<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_daily"
                android:icon="@drawable/monday"
                android:title="@string/gank_daily"/>
            <item
                android:id="@+id/nav_category"
                android:icon="@drawable/menu_new"
                android:title="@string/gank_category"/>

        </menu>
    </item>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:title="@string/theme"/>
            <item
                android:id="@+id/nav_setting"
                android:title="@string/setting"/>
        </menu>
    </item>


</menu>
